[project]
name = "pytorchproject-timeseries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotext>=5.3.2",
    "plotly>=6.6.0",
    "term-image>=0.7.2",
    "torch>=2.10.0",
]
